--- a/app.json
+++ b/app.json
@@ -1,11 +1,49 @@
 {
   "pages":[  
-    "pages/index/index"
+    "pages/start/start",
+    "pages/index/index",
+    "pages/search/search",
+    "pages/more/more",
+    "pages/me/me",
+    "pages/moviedetail/moviedetail",
+    "pages/centernav/nav0/nav0",
+    "pages/centernav/nav1/nav1",
+    "pages/centernav/nav2/nav2",
+    "pages/centernav/nav3/nav3",    
+    "pages/centernav/nav4/nav4"
   ],
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#84C1FF",
     "navigationBarTitleText": "爱电影",
     "navigationBarTextStyle":"white"
-  }
+  },
+"tabBar": {
+  "list": [
+    {
+      "pagePath": "pages/index/index",
+      "text": "首页",
+      "iconPath": "images/icon/sy0.png",
+      "selectedIconPath": "images/icon/sy1.png"
+    },
+    {
+      "pagePath": "pages/search/search",
+      "text": "搜索",
+      "iconPath": "images/icon/ss0.png",
+      "selectedIconPath": "images/icon/ss1.png"
+    },
+    {
+      "pagePath": "pages/more/more",
+      "text": "更多",
+      "iconPath": "images/icon/gd0.png",
+      "selectedIconPath": "images/icon/gd1.png"
+    },
+    {
+      "pagePath": "pages/me/me",
+      "text": "我的",
+      "iconPath": "images/icon/wd0.png",
+      "selectedIconPath": "images/icon/wd1.png"
+    }
+  ]
+}
 }
