首页百度云分享

--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#84C1FF",
-    "navigationBarTitleText": "爱电影",
+    "navigationBarTitleText": "云竹影视",
     "navigationBarTextStyle":"white"
   },
 "tabBar": {
